# BeatSaberBridgeAPI.CPP

./: .gitattributes  CMakeLists.txt  README.md  main.cpp
.github/workflows/: build.yml
include/: discordpp.h
scripts/: sdk-sha256.txt  setup-sdk.sh
